Revised 5-setup-hadoop.sh.

--- a/setup/hadoop-config/bash_profile.template
+++ b/setup/hadoop-config/bash_profile.template
@@ -11,8 +11,7 @@ PATH=$PATH:$HOME/bin
 
 export HADOOP_INSTALL=<HADOOP_INSTALL>
 export HADOOP_CONF_DIR=${HADOOP_INSTALL}/etc/hadoop
-export SPARK_HOME=<SPARK_INSTALL>
-export PATH=$PATH:${SPARK_HOME}/bin:${HADOOP_INSTALL}/bin
+export PATH=$PATH:${HADOOP_INSTALL}/bin
 
 unset SSH_ASKPASS
 
